--- a/public/shop_detail.html
+++ b/public/shop_detail.html
@@ -7,7 +7,7 @@
 <button class="btn btn-info" ng-click="editShop()">编辑商店</button>
 <button class="btn btn-info" ng-click="newGroupbuy()">新的团购</button>
 
-<h3>Groupbuys</h3>
+<h3>当前团购</h3>
 
 <uib-accordion close-others="true">
     <uib-accordion-group heading="{{gb.batchId}}{{gb.title}}" is-open="false" ng-repeat="gb in groupbuyList">
