--- a/public/group_detail.html
+++ b/public/group_detail.html
@@ -9,6 +9,7 @@
     <option ng-repeat="bid in groupbuyBatchIdArray" value="{{bid}}">{{bid}}</option>
 </select>
 <br><br>
+<!--
 <div class="col-sm-3 col-md-3 input-group">
     <input type="text" class="form-control" placeholder="请输入电话后四位..." ng-model="searchPhone">
     <div class="input-group-btn">
@@ -17,7 +18,8 @@
 </div>
 
 <br>
-<table class="table table-striped table-responsive" ng-init="tableInit()">
+-->
+<table class="table table-striped table-responsive" ng-init="tableInit()" ng-show="false">
 <thead>
     <tr>
     <th>订单时间</th>
@@ -52,9 +54,29 @@
     </tr>
 </tbody>
 </table>
+
+<textarea name="Text1" rows="3" cols="40" ng-click="selectTextArea($event)">{{wechat_msg}}</textarea>
+
+<uib-accordion close-others="true">
+    <uib-accordion-group heading="总计" is-open="false" panel-class="panel-info">
+        <div ng-repeat="(key,value) in totalOrderItemCount" >
+            {{key}}: {{value}}
+        </div>
+    </uib-accordion-group>   
+    <uib-accordion-group heading="{{order.name}} {{order.phone_number}}" is-open="false" ng-repeat="order in orders | orderBy:'timestamp'" panel-class="{{highlightRow(order)}}">
+        <div ng-repeat="oi in order.items">
+            <div ng-show="oi.item_count>0"> {{oi.item_name}}: {{oi.item_count}}</div>
+        </div>
+        备注：{{order.notes}}<br>
+        <button class="btn btn-info" ng-click="editOrder(order)">编辑</button>
+        <button class="btn btn-info" ng-click="pickupOrder(order._id)" ng-disabled="order.pickedup">提货</button>
+        <button class="btn btn-danger" ng-click="removeOrder(order)">删除</button>
+    </uib-accordion-group>   
+</uib-accordion>
+
 <br><br>
 
-<textarea name="Text1" rows="5" cols="40" ng-click="selectTextArea($event)">{{wechat_msg}}</textarea>
+
 
 
 <!-- Modal -->
@@ -71,8 +93,6 @@
         <div class="modal-body">
             微信名字
             <input class="form-control" ng-model="order.name"> 
-            E-mail
-            <input class="form-control" ng-model="order.email"> 
             电话(xxx-xxx-xxxx)
             <input class="form-control" ng-model="order.phone_number">
             
