add back table view

--- a/public/shop.html
+++ b/public/shop.html
@@ -24,6 +24,7 @@
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="bower_components/angular-bootstrap-toggle-switch/angular-toggle-switch.js"></script>
+    <script src="controllers/app.js"></script>
     <script src="controllers/shop_ctrl.js"></script>
     <script src="controllers/groupbuy_ctrl.js"></script>
 </body>
