add print button

--- a/public/shop.html
+++ b/public/shop.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="bower_components/angular-bootstrap-toggle-switch/style/bootstrap3/angular-toggle-switch-bootstrap-3.css">
     <link rel="stylesheet" href="css/group_detail.css">
+    <link rel="stylesheet" href="css/print.css" type="text/css" media="print">
 	<title>团购后台</title>
 </head>
 <body>
