--- a/public/group_detail_table.html
+++ b/public/group_detail_table.html
@@ -1,23 +1,15 @@
+
 <h3><a ng-href="{{create_groupbuyURL()}}">{{groupbuy.title}}</a></h3>
 <br>
-<button class="btn btn-info" ng-click="refresh()">刷新</button>
-<button class="btn btn-danger" ng-click="addOrder()">添加订单</button>
-<toggle-switch class="switch-success" ng-model="switchStatus" ng-click="toggle()"></toggle-switch>
-<br><br>
+<button class="btn btn-info noPrint" ng-click="refresh()">刷新</button>
+<button class="btn btn-info noPrint" ng-click="print()">打印</button>
+<button class="btn btn-warning noPrint" ng-click="addOrder()">添加订单</button>
+<toggle-switch class="switch-success noPrint" ng-model="switchStatus" ng-click="toggle()"></toggle-switch>
 <span class="text">批次</span>
-<select ng-model="selectedBatchId" ng-change="refresh()" >
+<select ng-model="selectedBatchId" ng-change="refresh()">
     <option ng-repeat="bid in groupbuyBatchIdArray" value="{{bid}}">{{bid}}</option>
 </select>
 <br><br>
-
-<div class="col-sm-3 col-md-3 input-group">
-    <input type="text" class="form-control" placeholder="请输入电话后四位..." ng-model="searchPhone">
-    <div class="input-group-btn">
-        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-    </div>
-</div>
-
-<br>
 
 <table class="table table-striped table-responsive" ng-init="tableInit()">
 <thead>
@@ -27,7 +19,7 @@
     <th>电话</th>
     <th ng-repeat-start="item in groupbuy.items" ng-repeat-end>{{item.item_name}}</th>
     <th>备注</th>
-    <th>操作</th>
+    <th class="noPrint">操作</th>
     </tr>
 </thead>
 <tbody>
@@ -39,14 +31,14 @@
         <td></td>
         <td></td>
     </tr>
-    <tr ng-repeat="order in orders |orderBy:'timestamp' |filter:{phone_number:searchPhone}" ng-class="highlightRow(order)">
+    <tr ng-repeat="order in orders |orderBy:'timestamp'" ng-class="highlightRow(order)">
         <td>{{order.timestamp | date:'yyyy-MM-dd HH:mm'}}</td>
         <td>{{order.name}}</td>
         <td>{{order.phone_number}}</td>
         <td ng-repeat-start="oi in order.items" ng-init="totalOrderItemCount[oi.item_name] = +totalOrderItemCount[oi.item_name] + +oi.item_count" ng-repeat-end>
             {{oi.item_count}}</td>
         <td>{{order.notes}}</td>
-        <td>
+        <td class="noPrint">
             <button class="btn btn-info" ng-click="editOrder(order)">编辑</button>
             <button class="btn btn-danger" ng-click="removeOrder(order)">删除</button>
         </td>
