--- a/public/addmiin.html
+++ b/public/addmiin.html
@@ -28,7 +28,7 @@
                 <button class="btn btn-danger" ng-click="removeShop(shop._id)">Remove</button>
             </uib-accordion-group>   
           </uib-accordion>
-
+	{{testMsg}}
         <!-- Modal -->
         <div ng-controller="AppCtrl">
             <script type="text/ng-template" id="newShop.html">
