--- a/public/order_view.html
+++ b/public/order_view.html
@@ -27,25 +27,25 @@
             <br><br>
             <div ng-show="groupbuyON">
                 <div class="row">
-                    <label>微信名字<span class="star">&#x2605</span></label>
+                    <label>微信名字(WechatID)<span class="star">&#x2605</span></label>
                     <input class="form-contrl" type="text" ng-model="order.name">
                 </div>
                 <br>
                 <div class="row">
-                    <label>电话<span class="star">&#x2605</span></label>
+                    <label>电话(Phone)<span class="star">&#x2605</span></label>
                     <input class="form-contrl" type="tel" ng-model="order.phone_number">
                 </div>
                 <br>
                 <div data-ng-repeat="item in groupbuy.items">
                     <div class="row">
-                        <lable>{{item.item_name}} 价格: {{item.item_price}}</lable>
+                        <lable>{{item.item_name}} 价格(Price): {{item.item_price}}</lable>
                         <input class="form-contrl" type="tel" ng-init="orderItem[$index].item_count=0" value=0 ng-model="orderItem[$index].item_count">
                     </div>
                     <br>
                 </div>
                 
                 <div class="row">
-                    <label>备注</label>
+                    <label>备注(Notes)</label>
                     <input class="form-contrl" type="text" ng-model="order.notes">
                 </div>
                 <br>
@@ -53,7 +53,7 @@
                     <label class="warning" ng-show="hasError">{{submit_check_message}}</label>
                 </div>
                 <br>
-                <button class="btn btn-primary btn-lg" type="button" ng-click="submit_order()">提交订单</button>
+                <button class="btn btn-primary btn-lg" type="button" ng-click="submit_order()">提交订单(Submit)</button>
             </div>
         </form>
         </div>
